--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								
 							</div>
 						<ul class="actions">
-							<li><a href="Manish Biswas 9th sep 23.pdf" class="button">My Résumé</a></li>
+							<li><a href="resume.pdf" class="button">My Résumé</a></li>
 						</ul>
 					</section>
 
@@ -101,8 +101,7 @@
 										India
 									</li>
 									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										+91-9820589676
+									
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
