the icon and blogs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Hi! its Manish Biswas!!</title>
+		<link rel="icon" type="image/x-icon" href="images/me.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,10 +33,43 @@
 							<br>💡  Developer, OpenSource enthusiast, Code fanatic.
 							<br>🌳  Love to be parts of Developer Communities, the Community Founder of <a href="https://decoywebsrc.vercel.app/">DECOY (STUDENTS SOCIETY FOR DEVELOPMENT CONSCIOUSNESS).</a> .    </p>
 						<ul class="actions">
-							<li><a href="#" class="button">Read My Blogs</a></li>
+							<li><a href="https://medium.com/@m4n15hb2" class="button">Read My Blogs</a></li>
 						</ul>
 					</section>
 
+					<section id="fresh">
+						<h2>Hot Stuff🔥</h2>
+						<div class="card1">
+							<div class="details">
+							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
+							  <div class="cardText">
+								Welcome to this card where i have made use of the "Hover" effect to add
+								some really cool interactions to it. Enjoy
+							  </div>
+							  <div class="button">Read More</div>
+							</div>
+						  </div>
+						  <div class="card2">
+							<div class="details">
+							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
+							  <div class="cardText">
+								Welcome to this card where i have made use of the "Hover" effect to add
+								some really cool interactions to it. Enjoy
+							  </div>
+							  <div class="button">Read More</div>
+							</div>
+						  </div>	
+						  <div class="card3">
+							<div class="details">
+							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
+							  <div class="cardText">
+								Welcome to this card where i have made use of the "Hover" effect to add
+								some really cool interactions to it. Enjoy
+							  </div>
+							  <div class="button">Read More</div>
+							</div>
+						  </div>											  
+					</section>
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
