the blog removed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</ul>
 					</section>
 
-					<section id="fresh">
+			<!--		<section id="fresh">
 						<h2>Hot Stuff🔥</h2>
 						<div class="card1">
 							<div class="details">
@@ -70,6 +70,7 @@
 							</div>
 						  </div>											  
 					</section>
+					-->
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
