--- a/index.html
+++ b/index.html
@@ -37,40 +37,35 @@
 						</ul>
 					</section>
 
-			<!--		<section id="fresh">
-						<h2>Hot Stuff🔥</h2>
+					<section id="fresh">
+						<h2>Latest Articles🔥</h2>
 						<div class="card1">
 							<div class="details">
-							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
-							  <div class="cardText">
-								Welcome to this card where i have made use of the "Hover" effect to add
-								some really cool interactions to it. Enjoy
+							  <div class="cardHeader">A vague but right approach to Tech Stack : Smart India hackathon: check point 1</div>
+								<div class="cardText">
 							  </div>
-							  <div class="button">Read More</div>
+							  <div class="button"><a href="https://medium.com/@m4n15hb2/an-vague-but-right-approach-to-tech-stack-smart-india-hackathon-check-point-1-9d4f9ba8efdb">Read More</a></div>
 							</div>
 						  </div>
 						  <div class="card2">
 							<div class="details">
-							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
+							  <div class="cardHeader">the Era of product creators,</div>
 							  <div class="cardText">
-								Welcome to this card where i have made use of the "Hover" effect to add
-								some really cool interactions to it. Enjoy
+								creativity and innovators : AI and ML tools how its changing the world for developers.
 							  </div>
-							  <div class="button">Read More</div>
+							  <div class="button"><a href="https://medium.com/@m4n15hb2/the-era-of-product-creators-creativity-and-innovators-ai-and-ml-tools-how-its-changing-the-415d496c8abc">Read More</a></div>
 							</div>
 						  </div>	
 						  <div class="card3">
 							<div class="details">
-							  <div class="cardHeader">SIH 2023 Grand Finale!!</div>
+							  <div class="cardHeader">Networking and Touching Grass</div>
 							  <div class="cardText">
-								Welcome to this card where i have made use of the "Hover" effect to add
-								some really cool interactions to it. Enjoy
+								My Experience at the CityJS 23 Conference.
 							  </div>
-							  <div class="button">Read More</div>
+							  <div class="button"><a href="https://medium.com/@m4n15hb2/networking-and-touching-grass-my-experience-at-the-cityjs-23-conference-f6998fa12c21">Read More</a></div>
 							</div>
 						  </div>											  
 					</section>
-					-->
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
