--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								
 							</div>
 						<ul class="actions">
-							<li><a href="resume.pdf" class="button">My Résumé</a></li>
+							<li><a href="" class="button">My Résumé</a></li>
 						</ul>
 					</section>
 
