--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<div class="row">
 								<article class="col-6 col-12-xsmall work-item">
 									<a href="images/fulls/nita.jpeg" class="image fit thumb"><img src="images/thumbs/nit.png" alt="" /></a>
-									<h3>National Institute of Technology, Agarta - NIT A</h3>
+									<h3>National Institute of Technology, Agartala - NIT A</h3>
 									<h3>Major: Electronics and Communication Engineering</h3>
 									<p>National Institute of Technology Agartala (NIT Agartala or NITA) is a technology-oriented institute of higher education established by India's Ministry of Human Resource Development Government of India in Agartala, India. Thus being recognized as an Institute of National Importance.
 								</p>
