--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">m4n15hb2@gmail.com</a>
+										<a href="#">me@manishb.in</a>
 									</li>
 								</ul>
 							</div>
